# chillphoto

./: .gitignore  Cargo.toml  README.md
src/: category_path.rs  config.rs  exif.rs  format.rs  gallery.rs  image_ai.rs  main.rs  output.rs  photo.rs  serve.rs  spell_check.rs  summary.rs  util.rs
src/copyright_registration/: genpdfi_cell_decorator.rs  mod.rs
src/fonts/: README.md
src/gallery/: category.rs  category_path.rs  config.rs  exif.rs  item.rs  mod.rs  order.rs  page.rs  photo.rs  rich_text.rs  static_file.rs
src/image_ai/: mod.rs
src/output/: api.rs  app.rs  build.rs  edit.js  format.rs  mod.rs  pwa.rs  rich_text.rs  search.js  search.rs  serve.rs  structured_data.rs
