[package]
name = "chillphoto"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
futures = "0.3.31"
http = "1.3.1"
httparse = "1.10.1"
image = "0.25.5"
kamadak-exif = "0.6.1"
markdown = "1.0.0-alpha.23"
markup_fmt = "0.19.0"
rayon = "1.10.0"
serde = "1.0.219"
toml = "0.8.20"
wax = "0.6.0"
yew = { version = "0.21.0", features = ["ssr"] }
