[package]
name = "chillphoto"
authors = ["Finn Bear"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/chillphoto/"
description = "Static photo gallery website generator"

[dependencies]
async-openai = "0.28.1"
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
futures = "0.3.31"
http = "1.3.1"
httparse = "1.10.1"
image = "0.25.6"
indicatif = "0.17.11"
kamadak-exif = "0.6.1"
markdown = "1.0.0-alpha.23"
markup_fmt = "0.19.0"
md5 = "0.7.0"
ollama-rs = "0.3.0"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
sitemap-rs = "0.2.2"
tempfile = "3.20.0"
tokio = { version = "1.44.2", features = ["rt"] }
toml = "0.8.20"
toml_edit = "0.22.24"
wax = "0.6.0"
xmp_toolkit = "1.10.0"
yew = { version = "0.21.0", features = ["ssr"] }
